--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,41 @@
     <link rel="icon" href="./assets/favicon.svg" />
     <link rel="stylesheet" href="./styles/output.css" />
   </head>
-  <body>
-    <h1>유틸리티 퍼스트 - Tailwind CSS</h1>
-    <figure>
-      <img src="./assets/tailwind-text-logo.svg" alt="Tailwind CSS" />
-      <figcaption>텍스트 로고</figcaption>
-    </figure>
+  <!-- UI를 완성해주세요 ! -->
+  <body
+    class="bg-sky-200 font-[SUIT] min-h-screen flex justify-center items-center text-blue-500 hover:text-pink-500"
+  >
+    <div
+      class="bg-white w-1/2 min-w-3xs p-6 flex rounded-2xl shadow-2xl items-center gap-6"
+    >
+      <svg
+        class="size-16 shrink-0"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 54 33"
+      >
+        <g clip-path="url(#prefix__clip0)">
+          <path
+            fill="#38bdf8"
+            fill-rule="evenodd"
+            d="M27 0c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.054.513 3.522 2.004 5.147 3.653C30.744 13.09 33.808 16.2 40.5 16.2c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C36.756 3.11 33.692 0 27 0zM13.5 16.2C6.3 16.2 1.8 19.8 0 27c2.7-3.6 5.85-4.95 9.45-4.05 2.054.514 3.522 2.004 5.147 3.653C17.244 29.29 20.308 32.4 27 32.4c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C23.256 19.31 20.192 16.2 13.5 16.2z"
+            clip-rule="evenodd"
+          />
+        </g>
+        <defs>
+          <clipPath id="prefix__clip0">
+            <path fill="#fff" d="M0 0h54v32.4H0z" />
+          </clipPath>
+        </defs>
+      </svg>
+      <div class="space-y-3">
+        <h1 class="font-[SUIT] font-[700] text-3xl">Tailwind CSS</h1>
+        <p class="text-black">
+          다양한 Tailwind CSS의 유틸리티 세트를 활용해 복잡한 컴포넌트를 구성할
+          수 있습니다.
+        </p>
+        <a href="#" class="">유틸리티 퍼스트 펀더멘탈</a>
+      </div>
+    </div>
   </body>
 </html>
