--- a/src/index.html
+++ b/src/index.html
@@ -1,47 +1,101 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>유틸리티 퍼스트 — Tailwind CSS</title>
+    <title>Tailwind CSS</title>
     <link rel="icon" href="./assets/favicon.svg" />
     <link rel="stylesheet" href="./styles/output.css" />
   </head>
-  <!-- UI를 완성해주세요 ! -->
-  <body
-    class="bg-sky-200 font-[SUIT] min-h-screen flex justify-center items-center text-blue-500 hover:text-pink-500"
-  >
-    <div
-      class="bg-white w-1/2 min-w-3xs p-6 flex rounded-2xl shadow-2xl items-center gap-6"
+  <body>
+    <h1 class="my-4 text-center text-2xl font-bold">Tailwind CSS</h1>
+    <ul
+      class="gird gird-cols-(--lion) mx-auto grid w-1/2 max-w-[800px] sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
     >
-      <svg
-        class="size-16 shrink-0"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 54 33"
-      >
-        <g clip-path="url(#prefix__clip0)">
-          <path
-            fill="#38bdf8"
-            fill-rule="evenodd"
-            d="M27 0c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.054.513 3.522 2.004 5.147 3.653C30.744 13.09 33.808 16.2 40.5 16.2c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C36.756 3.11 33.692 0 27 0zM13.5 16.2C6.3 16.2 1.8 19.8 0 27c2.7-3.6 5.85-4.95 9.45-4.05 2.054.514 3.522 2.004 5.147 3.653C17.244 29.29 20.308 32.4 27 32.4c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C23.256 19.31 20.192 16.2 13.5 16.2z"
-            clip-rule="evenodd"
-          />
-        </g>
-        <defs>
-          <clipPath id="prefix__clip0">
-            <path fill="#fff" d="M0 0h54v32.4H0z" />
-          </clipPath>
-        </defs>
-      </svg>
-      <div class="space-y-3">
-        <h1 class="font-[SUIT] font-[700] text-3xl">Tailwind CSS</h1>
-        <p class="text-black">
-          다양한 Tailwind CSS의 유틸리티 세트를 활용해 복잡한 컴포넌트를 구성할
-          수 있습니다.
-        </p>
-        <a href="#" class="">유틸리티 퍼스트 펀더멘탈</a>
-      </div>
-    </div>
+      <li class="bg-blue-100">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-01.html"
+          >중앙 배치</a
+        >
+      </li>
+      <li class="bg-blue-200">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-02.html"
+          >Example 02</a
+        >
+      </li>
+      <li class="bg-blue-300">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-03.html"
+          >Example 03</a
+        >
+      </li>
+      <li class="bg-blue-400">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-04.html"
+          >Example 04</a
+        >
+      </li>
+      <li class="bg-purple-100">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-05.html"
+          >Example 05</a
+        >
+      </li>
+      <li class="bg-purple-200">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-06.html"
+          >Example 06</a
+        >
+      </li>
+      <li class="bg-purple-300">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-07.html"
+          >Example 07</a
+        >
+      </li>
+      <li class="bg-purple-400">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-08.html"
+          >Example 08</a
+        >
+      </li>
+      <li class="bg-pink-100">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-09.html"
+          >Example 09</a
+        >
+      </li>
+      <li class="bg-pink-200">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-10.html"
+          >Example 10</a
+        >
+      </li>
+      <li class="bg-pink-300">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-11.html"
+          >Example 11</a
+        >
+      </li>
+      <li class="bg-pink-400">
+        <a
+          class="font-'SUIT block p-4 text-center font-[Pretendard]"
+          href="example-12.html"
+          >Example 12</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
