--- a/src/example-02.html
+++ b/src/example-02.html
@@ -10,7 +10,7 @@
       as="font"
       href="/assets/font/woff2/PretendardVariable.woff2"
     />
-    <link rel="stylesheet" href="/styles/output.css" />
+    <link rel="stylesheet" href="./styles/output.css" />
   </head>
   <body>
     <div class="ediya-youtube">
