--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <title>Tailwind CSS</title>
     <link rel="icon" href="./assets/favicon.svg" />
     <link rel="stylesheet" href="./styles/output.css" />
+    <link
+      rel="preload"
+      as="font"
+      href="/assets/font/pretendard/woff2/PretendardVariable.woff2"
+    />
   </head>
   <body>
     <h1 class="my-4 text-center text-2xl font-bold">Tailwind CSS</h1>
@@ -13,86 +18,62 @@
       class="gird gird-cols-(--lion) mx-auto grid w-1/2 max-w-[800px] sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
     >
       <li class="bg-blue-100">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-01.html"
-          >중앙 배치</a
+        <a class="font-'SUIT block p-4 text-center" href="example-01.html"
+          >Example 01 - 중앙 배치</a
         >
       </li>
       <li class="bg-blue-200">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-02.html"
-          >Example 02</a
+        <a class="font-'SUIT block p-4 text-center" href="example-02.html"
+          >Example 02 - 이디야 영상</a
         >
       </li>
       <li class="bg-blue-300">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-03.html"
-          >Example 03</a
+        <a class="font-'SUIT block p-4 text-center" href="example-03.html"
+          >Example 03 - Notice</a
         >
       </li>
       <li class="bg-blue-400">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-04.html"
+        <a class="font-'SUIT block p-4 text-center" href="example-04.html"
           >Example 04</a
         >
       </li>
       <li class="bg-purple-100">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-05.html"
+        <a class="font-'SUIT block p-4 text-center" href="example-05.html"
           >Example 05</a
         >
       </li>
       <li class="bg-purple-200">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-06.html"
+        <a class="font-'SUIT block p-4 text-center" href="example-06.html"
           >Example 06</a
         >
       </li>
       <li class="bg-purple-300">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-07.html"
+        <a class="font-'SUIT block p-4 text-center" href="example-07.html"
           >Example 07</a
         >
       </li>
       <li class="bg-purple-400">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-08.html"
+        <a class="font-'SUIT block p-4 text-center" href="example-08.html"
           >Example 08</a
         >
       </li>
       <li class="bg-pink-100">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-09.html"
+        <a class="font-'SUIT block p-4 text-center" href="example-09.html"
           >Example 09</a
         >
       </li>
       <li class="bg-pink-200">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-10.html"
+        <a class="font-'SUIT block p-4 text-center" href="example-10.html"
           >Example 10</a
         >
       </li>
       <li class="bg-pink-300">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-11.html"
+        <a class="font-'SUIT block p-4 text-center" href="example-11.html"
           >Example 11</a
         >
       </li>
       <li class="bg-pink-400">
-        <a
-          class="font-'SUIT block p-4 text-center font-[Pretendard]"
-          href="example-12.html"
+        <a class="font-'SUIT block p-4 text-center" href="example-12.html"
           >Example 12</a
         >
       </li>
