--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         >
       </li>
       <li class="bg-blue-400">
-        <a class="block p-4 text-center" href="example-04.html">이디야 뉴스</a>
+        <a class="block p-4 text-center" href="example-04.html">이디야 공지</a>
       </li>
       <li class="bg-purple-100">
         <a class="block p-4 text-center" href="example-05.html"
@@ -35,7 +35,7 @@
         >
       </li>
       <li class="bg-purple-200">
-        <a class="block p-4 text-center" href="example-06.html">Example 06</a>
+        <a class="block p-4 text-center" href="example-06.html">이디야 뉴스</a>
       </li>
       <li class="bg-purple-300">
         <a class="block p-4 text-center" href="example-07.html">Example 07</a>
