--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <a class="block p-4 text-center" href="example-06.html">이디야 뉴스</a>
       </li>
       <li class="bg-purple-300">
-        <a class="block p-4 text-center" href="example-07.html">Example 07</a>
+        <a class="block p-4 text-center" href="example-07.html">모달</a>
       </li>
       <li class="bg-purple-400">
         <a class="block p-4 text-center" href="example-08.html">Example 08</a>
