--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,12 @@
         <a class="block p-4 text-center" href="example-07.html">모달</a>
       </li>
       <li class="bg-purple-400">
-        <a class="block p-4 text-center" href="example-08.html">Example 08</a>
+        <a class="block p-4 text-center" href="example-08.html"
+          >컨테이너 쿼리</a
+        >
       </li>
       <li class="bg-pink-100">
-        <a class="block p-4 text-center" href="example-09.html">Example 09</a>
+        <a class="block p-4 text-center" href="example-09.html">크림</a>
       </li>
       <li class="bg-pink-200">
         <a class="block p-4 text-center" href="example-10.html">Example 10</a>
@@ -54,6 +56,18 @@
       </li>
       <li class="bg-pink-400">
         <a class="block p-4 text-center" href="example-12.html">Example 12</a>
+      </li>
+    </ul>
+    <!-- 공부 -->
+    <br />
+    <br />
+    <br />
+    <h1 class="my-4 text-center text-2xl font-bold">연습을 하자</h1>
+    <ul class="mx-auto grid w-1/2 max-w-[800px] grid-cols-(--lion)">
+      <li class="bg-blue-100">
+        <a class="block p-4 text-center" href="./study/0311.html"
+          >공지 만들기</a
+        >
       </li>
     </ul>
   </body>
